Corrected the input group alignment

--- a/css/style.css
+++ b/css/style.css
@@ -42,13 +42,18 @@ h1 > span {
     line-height: 25px;
 }
 
+form {
+    display: flex;
+    justify-content: center;
+}
+
 
 
 .input-group {
     border: 1px solid var(--desaturated-red);
     border-radius: 50px;
     display: flex;
-    margin: 25px 30px;
+    margin: 25px 0;
     width: max-content;
     height: max-content;
 
@@ -77,12 +82,19 @@ input::placeholder {
 }
 
 button {
-    border-radius: 45%;
+    border-radius: 25px 28px 28px 25px;
     background: linear-gradient(135deg, var(--grad-color-3), var(--grad-color-4));
     box-shadow: 0px 1px 3px var(--dark-grayish-red);
     padding: 15px 25px 15px 30px;
     width: 100%;
+    transition: all .3s ease;
 
+
+}
+
+button:hover {
+    transform:scale(1.1);
+    background: linear-gradient(135deg, var(--grad-color-1),var(--grad-color-3));
 }
 
 
@@ -125,4 +137,15 @@ header > img {
 
 .error {
     border: 2px solid var(--soft-red);
+}
+
+/*========== Desktop View ====================*/
+
+
+@media screen and (min-size: 1024px) {
+    body {
+        display: grid;
+        grid-template-columns: 12px 12px 12px;
+        grid-template-rows: 12px 12px 12px;
+    }
 }
